[project]
name = "my-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "awerdich", email = "awerdich@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.4.10",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
]

[project.scripts]
my-project = "my_project:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
